--- a/Todo/src/app/todo/todo-list/todo-item/todo-item.component.html
+++ b/Todo/src/app/todo/todo-list/todo-item/todo-item.component.html
@@ -1,3 +1,16 @@
-<p>
-  todo-item works!
-</p>
+<div *ngIf="task" class="form">
+  <div class="form-group">
+    <label>{{ task.title }}</label>
+    <input type="text" class="form-control" [(ngModel)]="task.title">
+  </div>
+  <div class="form-group">
+    <label>{{ task.description }}</label>
+    <input type="text" class="form-control" [(ngModel)]="task.description">
+  </div>
+  <div>
+    <button type="button" class="btn btn-xs btn-default" [ngClass]="{'btn-danger': task.status === 'pending'}" (click)="task.status = 'pending'">Pending</button>
+    <button type="button" class="btn btn-xs btn-default" [ngClass]="{'btn-warning': task.status === 'warning'}" (click)="task.status = 'ongoing'">OnGoing</button>
+    <button type="button" class="btn btn-xs btn-default" [ngClass]="{'btn-success': task.status === 'success'}" (click)="task.status = 'completed'">Completed</button>
+  </div>
+
+</div>
